--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>variables</h1>
+    <h1>Fiesta Dump</h1>
+    <h2>Compra de entradas</h2>
 
 
     <script src="main.js"></script>
