--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Fiesta Dump</h1>
-    <h2>Compra de entradas</h2>
+    <h1>MEDICINA EN DESARROLLO CORPORAL</h1>
+    <h2>Elige tu tamaño ideal y no lo que quiere tu genetica</h2>
 
 
     <script src="main.js"></script>
