--- a/index.html
+++ b/index.html
@@ -1,12 +1,83 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Depotin</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                      <a class="navbar-brand" href="#"><img src="img/logojs.png" alt="DeportesS" width="80"></a>
+                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">Productos</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">Locales</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">Ayuda</a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                </nav>
+            </div>
+            <div class="col-md-6 d-flex align-items-center justify-content-end">
+              <a href="#" class="btn btn-warning">
+                <button type="button" class="btn btn-warning position-relative">
+                <img src="img/carrito..png" alt="carrito" width="24"/>
+                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">1</span>
+                </button>
+              </a>
+            </div>
+        </div>
+    </div>
+    <div class="container my-5">
+      <div id="Productos" class="row">
+
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8">
+          <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link text-secondary" aria-current="page" href="#">Terminos y Condiciones</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-secondary" href="#">Política de privacidad y cookies</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-secondary" href="#">Locales</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-secondary" href="#">Contacto</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-4 d-flex align-items-center justify-content-end">
+          <a href="index.html"><img src="img/logojs.png" alt="Depotin logo" width="35"></a>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  </body>
 </html>
