--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
     </div>
     <div class="container my-5">
-      <div id="Productos" class="row">
+      <div id="productos" class="row">
 
       </div>
     </div>
@@ -73,12 +73,8 @@
         </div>
       </div>
     </div>
-
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="main.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
