--- a/index.html
+++ b/index.html
@@ -36,12 +36,7 @@
                 </nav>
             </div>
             <div class="col-md-6 d-flex align-items-center justify-content-end">
-              <a href="#" class="btn btn-warning">
-                <button type="button" class="btn btn-warning position-relative">
-                <img src="img/carrito..png" alt="carrito" width="24"/>
-                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">1</span>
-                </button>
-              </a>
+              <div id="carrito"></div>
             </div>
         </div>
     </div>
@@ -76,5 +71,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="main.js"></script>
     <script src="index.js"></script>
+    <script src="carro.js"></script>
   </body>
 </html>
