--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
                 </nav>
             </div>
             <div class="col-md-6 d-flex align-items-center justify-content-end">
-              <div id="carrito"></div>
+                <a href="carrito.html" class="btn btn-warning position-relative">
+                  <img src="img/carrito..png" alt="carrito" width="24"/>
+                  <span id="carrito" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">0</span>
+                </a>            
             </div>
         </div>
     </div>
 
-    
+
     <div class="container my-5">
       <div id="productos" class="row">
 
