--- a/carrito.html
+++ b/carrito.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Depotin</title>
+    <title>Productos Seleccionados</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
   <body>
@@ -19,7 +19,7 @@
                       <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="#">Productos</a>
@@ -46,6 +46,7 @@
 
 
     <div class="container my-5">
+      <h1 class="text-center">Productos Seleccionados</h1>
       <div id="productos" class="row">
 
       </div>
@@ -75,7 +76,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/index_carro.js"></script>
     <script src="js/carro.js"></script>
   </body>
 </html>
