--- a/carrito.html
+++ b/carrito.html
@@ -36,7 +36,7 @@
                 </nav>
             </div>
             <div class="col-md-6 d-flex align-items-center justify-content-end">
-                <a href="carrito.html" class="btn btn-warning position-relative">
+                <a href="carrito.html" title="Ir al Carrito" class="btn btn-warning position-relative">
                   <img src="img/carrito..png" alt="carrito" width="24"/>
                   <span id="carrito" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">0</span>
                 </a>            
