--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </ul>
         </div>
         <div class="col-md-4 d-flex align-items-center justify-content-end">
-          <a href="index.html"><img src="img/logojs.png" alt="Depotin logo" width="35"></a>
+          <a href="index.html" title="Ir al Carrito"><img src="img/logojs.png" alt="Depotin logo" width="35"></a>
         </div>
       </div>
     </div>
